# fluffychat-click-packaging

./: .gitmodules  build.sh  clickable.yaml  fluffychat.apparmor  fluffychat.desktop  manifest.json  postbuild-flutter-embedded-linux.sh  prebuild-flutter-embedded-linux.sh
.github/workflows/: build.yml
content_hub_file_picker/: pubspec.yaml
content_hub_file_picker/elinux/: CMakeLists.txt  content_hub_file_picker_plugin.cc
content_hub_file_picker/elinux/include/content_hub_file_picker/: content_hub_file_picker_plugin.h
content_hub_file_picker/lib/: content_hub_file_picker.dart
fluffychat-elinux/: CMakeLists.txt
fluffychat-elinux/runner/: main.cc
patches/: fluffychat-content-hub-picker.patch  flutter-elinux-flutter-344.patch  flutter-embedded-linux-ut.patch
url_launcher_elinux/: pubspec.yaml
url_launcher_elinux/elinux/: CMakeLists.txt  url_launcher_elinux_plugin.cc
url_launcher_elinux/elinux/include/url_launcher_elinux/: url_launcher_elinux_plugin.h
url_launcher_elinux/lib/: url_launcher_elinux.dart
window_to_front_elinux/: pubspec.yaml
window_to_front_elinux/elinux/: CMakeLists.txt  window_to_front_elinux_plugin.cc
window_to_front_elinux/elinux/include/window_to_front_elinux/: window_to_front_elinux_plugin.h
window_to_front_elinux/lib/: window_to_front_elinux.dart
